--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,11 @@
           <artifactId>jbcrypt</artifactId>
           <version>0.4</version>
       </dependency>
+      <dependency>
+          <groupId>org.mindrot</groupId>
+          <artifactId>jbcrypt</artifactId>
+          <version>0.4</version>
+      </dependency>
   </dependencies>
 
   <build>
